[gd_scene load_steps=19 format=3 uid="uid://bkt373fy3qqif"]

[ext_resource type="Script" uid="uid://cqdx1nbp1fbug" path="res://scripts/maps_controller.gd" id="2_hpxl2"]
[ext_resource type="Script" uid="uid://sbxyh02fty1g" path="res://scripts/tilemaps_container.gd" id="3_fem2g"]
[ext_resource type="Texture2D" uid="uid://3rfqk6as4u01" path="res://Terrain/world_tileset.png" id="3_hpxl2"]
[ext_resource type="Texture2D" uid="uid://ddk52xrt41th7" path="res://Terrain/parallax/2.png" id="3_vlwwk"]
[ext_resource type="PackedScene" uid="uid://dioqqf824b1ie" path="res://scenes/kick_charge.tscn" id="4_3vde5"]
[ext_resource type="Texture2D" uid="uid://gc5w1ka5xxhu" path="res://Terrain/parallax/3.png" id="4_qc43e"]
[ext_resource type="PackedScene" uid="uid://ftywjr8fuk37" path="res://scenes/player.tscn" id="5_hpxl2"]
[ext_resource type="Texture2D" uid="uid://bqjpyba2oq12l" path="res://Terrain/parallax/4.png" id="5_jjf0l"]
[ext_resource type="PackedScene" uid="uid://daheyntuuu013" path="res://scenes/space_background.tscn" id="6_fem2g"]
[ext_resource type="AudioStream" uid="uid://f7q27c6j734k" path="res://sounds/kick.wav" id="6_qc43e"]
[ext_resource type="Texture2D" uid="uid://dglowj3h3glkp" path="res://Terrain/parallax/1.png" id="7_31kg2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hpxl2"]
texture = ExtResource("3_hpxl2")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_fem2g"]
sources/0 = SubResource("TileSetAtlasSource_hpxl2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_31kg2"]
texture = ExtResource("3_hpxl2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_6s1ea"]
sources/0 = SubResource("TileSetAtlasSource_31kg2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fem2g"]
texture = ExtResource("3_hpxl2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 4)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_31kg2"]
sources/0 = SubResource("TileSetAtlasSource_fem2g")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_w40hx"]

[node name="TutorialLevel" type="Node2D"]

[node name="SpaceBackground" parent="." instance=ExtResource("6_fem2g")]

[node name="InnerBackground" type="PanelContainer" parent="."]
clip_contents = true
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0

[node name="Clouds" type="Sprite2D" parent="InnerBackground"]
position = Vector2(16, 16)
texture = ExtResource("7_31kg2")
region_rect = Rect2(0, 0, 1024, 400)

[node name="Grass" type="Sprite2D" parent="InnerBackground"]
position = Vector2(32, 32)
texture = ExtResource("3_vlwwk")
region_rect = Rect2(0, 0, 1024, 400)

[node name="Grass2" type="Sprite2D" parent="InnerBackground"]
position = Vector2(64, 64)
texture = ExtResource("4_qc43e")
region_rect = Rect2(0, 0, 1024, 400)

[node name="Water" type="Sprite2D" parent="InnerBackground"]
position = Vector2(128, 128)
texture = ExtResource("5_jjf0l")
region_rect = Rect2(0, 0, 1024, 400)

[node name="KickAudioStream" type="AudioStreamPlayer2D" parent="InnerBackground"]
stream = ExtResource("6_qc43e")

[node name="MapsController" type="Node2D" parent="."]
script = ExtResource("2_hpxl2")
kick_charge_path = NodePath("../CanvasLayer/KickCharge")
player_path = NodePath("../Player")
tilemaps_path = NodePath("../TilemapsContainer")
metadata/_custom_type_script = "uid://cqdx1nbp1fbug"

[node name="TilemapsContainer" type="Node2D" parent="."]
script = ExtResource("3_fem2g")
metadata/_custom_type_script = "uid://sbxyh02fty1g"

[node name="TileMapLayer" type="TileMapLayer" parent="TilemapsContainer"]
position = Vector2(32, 32)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_fem2g")

[node name="TileMapLayer2" type="TileMapLayer" parent="TilemapsContainer"]
position = Vector2(-32, -32)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 2, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 2, 0, 0, 0)
tile_set = SubResource("TileSet_6s1ea")

[node name="TileMapLayer3" type="TileMapLayer" parent="TilemapsContainer"]
tile_set = SubResource("TileSet_31kg2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5, 5)
shape = SubResource("WorldBoundaryShape2D_w40hx")

[node name="Player" parent="." instance=ExtResource("5_hpxl2")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="KickCharge" parent="CanvasLayer" instance=ExtResource("4_3vde5")]
anchors_preset = -1
anchor_left = 0.041666668
anchor_top = 0.80246913
anchor_right = 0.35416666
anchor_bottom = 0.9259259
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 0
scale = Vector2(1, 1)
alignment = 1
metadata/_edit_use_anchors_ = true
